# velero_wui_py

./: Makefile  README.md
app/: main.py  pyproject.toml
src/: pyproject.toml  server.py
src/velero/: __init__.py  utils.py
src/velero/views/settings/: settings.py
