[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Denis Tumakov <dmarshaltu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
asyncio = "^3.4.3"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
